fix(carousel): update the carousel horizontal scroll

--- a/express/blocks/shared/carousel.css
+++ b/express/blocks/shared/carousel.css
@@ -66,14 +66,14 @@ main .carousel-container .carousel-fader-right {
   pointer-events: none;
 }
 
-main .carousel-container .carousel-fader-left.arrow-hidden,
-main .carousel-container .carousel-fader-right.arrow-hidden,
-main .carousel-container.controls-hidden .carousel-fader-left,
-main .carousel-container.controls-hidden .carousel-fader-right {
+main .carousel-container .carousel-platform .carousel-fader-left.arrow-hidden,
+main .carousel-container .carousel-platform .carousel-fader-right.arrow-hidden,
+main .carousel-container .carousel-platform.controls-hidden .carousel-fader-left,
+main .carousel-container .carousel-platform.controls-hidden .carousel-fader-right {
   opacity: 0;
 }
 
-main .carousel-container.controls-hidden {
+main .carousel-container .carousel-platform.controls-hidden {
   scroll-snap-type: none;
 }
 
